# Dreamcobots

./: .dreamco_state.db  .env.example  .eslintrc.js  .gcloudignore  .gitignore  .replit  ARCHITECTURE.md  AutonomyModel.md  BOT_GUIDE.md  CHANGELOG.md  Dockerfile  FAQ.md  IDEAS_ROADMAP.md  MERGE_LOG.md  METRICS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SETUP.md  UNMERGED_PRS.md  app.yaml  bot.manifest.schema.json  cloudbuild.yaml  dashboard-comparison-report.html  dashboard-dead-code-report.json  dashboard-feature-matrix.json  dashboard-migration-plan.md  dashboard-rankings.json  dashboard_capability_adapter.py  dashboard_feature_extractor.py  dashboard_inventory_builder.py  dashboard_queue_adapter.py  docker-compose.prod.yml  dreamco.md  dreamco_import_paths.py  dreamco_mcp_server.py  gen_skill_files.py  index.js  package-lock.json  (+10 more)
.dreamco_chroma/: chroma.sqlite3
.github/: CODEOWNERS  dependabot.yml
AIMarketplace/: plugins.md
App_bots/: CommandCore.json  DreamAIInfra.json  DreamAdmin.json  DreamAgents.json  DreamAgriculture.json  DreamArts.json  DreamAutomation.json  DreamBizLaunch.json  DreamCodeLab.json  DreamConstruction.json  DreamContent.json  DreamCrypto.json  DreamCustIntel.json  DreamCyber.json  DreamData.json  DreamDecision.json  DreamEducation.json  DreamEmpire.json  DreamEntFinance.json  DreamFinance.json  DreamFlow.json  DreamFood.json  DreamGlobal.json  DreamHealth.json  DreamInfluence.json  DreamLegal.json  DreamLoans.json  DreamMaintenance.json  DreamMarket.json  DreamMilitary.json  DreamOps.json  DreamPayments.json  DreamPersonalCare.json  DreamPlanetary.json  DreamProServices.json  DreamProduction.json  DreamProtection.json  DreamRealEstate.json  DreamRetail.json  DreamSalesPro.json  (+18 more)
BuddyAI/: base_bot.py  buddy.py  income_dashboard.py  master_registry.py  navigation.py  settings.py  task_engine.py
BusinessLaunchPad/: tools.md
Business_bots/: __init__.py  accommodation_food_bot.py  administrative_support_industry_bot.py  agriculture_bot.py  arts_entertainment_bot.py  brand_monitor_bot.py  business_plan_bot.py  competitor_analyzer_bot.py  compliance_checker_bot.py  construction_bot.py  contract_generator_bot.py  customer_support_bot.py  document_manager_bot.py  ecommerce_optimizer_bot.py  educational_services_bot.py  employee_onboarding_bot.py  expense_tracker_bot.py  feature_2.py  feature_3.py  finance_insurance_bot.py  financial_forecaster_bot.py  franchise_analyzer_bot.py  grant_finder_bot.py  health_care_bot.py  information_bot.py  insurance_advisor_bot.py  inventory_manager_bot.py  kpi_tracker_bot.py  llc_formation_bot.py  management_companies_bot.py  manufacturing_bot.py  market_research_bot.py  meeting_scheduler_bot.py  mining_bot.py  other_services_bot.py  partnership_finder_bot.py  payroll_bot.py  pitch_deck_bot.py  pricing_strategy_bot.py  professional_services_bot.py  (+10 more)
DivisionDashboard/: dashboard.md
DreamCo/: package-lock.json
Fiverr_bots/: buyer_persona_bot.py  client_finder_bot.py  client_retention_bot.py  competitor_spy_bot.py  cross_sell_bot.py  deadline_tracker_bot.py  dispute_resolver_bot.py  earnings_tracker_bot.py  feature_1.py  feature_2.py  feedback_analyzer_bot.py  gig_description_optimizer_bot.py  gig_image_optimizer_bot.py  (+16 more)
(+9443 files in other folders)
