[project]
name = "dreamcobots-platform"
version = "0.1.0"
description = "DreamCobots platform foundation dependency lock project."
requires-python = ">=3.11,<3.12"
dependencies = [
  "pytest>=9.0.3",
  "pytest-benchmark>=5.2.3",
  "pytest-cov>=7.1.0",
  "requests>=2.34.2",
  "python-dotenv>=1.2.2",
  "schedule>=1.2.2",
  "jinja2>=3.1.6",
  "selenium>=4.44.0",
  "webdriver-manager>=4.1.1",
  "openai>=2.37.0",
  "fastapi>=0.136.1",
  "httpx>=0.28.1",
  "flask>=3.1.3",
  "flask-cors>=6.0.2",
  "stripe>=15.1.0",
]

[tool.uv]
managed = true
